RbA Build/src/objects/Sash_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Product_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Configuration</label>
        <referenceTo>Product_Configuration__c</referenceTo>
        <relationshipLabel>Sash Configurations</relationshipLabel>
        <relationshipName>Sash_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sash_Operation__c</fullName>
        <label>Sash Operation</label>
        <picklist>
            <picklistValues>
                <fullName>Left</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Right</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stationary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Left Vent/Stationary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stationary/Right Vent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Left Vent/Stat/Stat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stat/Stat/Right Vent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active/Passive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active/Stationary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stationary/Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passive/Active</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Sash_Ratio__c</fullName>
        <label>Sash Ratio</label>
        <picklist>
            <picklistValues>
                <fullName>1:1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:1:1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:2:1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Sash Configuration</label>
    <nameField>
        <displayFormat>SHC-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sash Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>